# mcdaio

./: LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/modules/: analysis.rst  app.rst  methods.rst  metrics.rst  normalization.rst
mcdaio/: __init__.py  analysis.py  app.py  cli.py  methods.py  metrics.py  normalization.py
tests/: test_mcdaio.py
