[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcdaio"
version = "0.2.1"
description = "A Streamlit-based MCDA decision support toolkit with sensitivity analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Laura Białobrzewska" },
]
keywords = ["mcda", "mabac", "topsis", "vikor", "aras", "decision-analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "plotly>=5.0",
    "streamlit>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "sphinx>=5",
    "sphinx-rtd-theme",
    "myst-parser",
]

[project.scripts]
mcdaio = "mcdaio.cli:main"

[tool.setuptools.packages.find]
include = ["mcdaio*"]
exclude = ["tests*", "docs*"]
